# MemGuard

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  cursorrules  setup.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_memories.py
backend/app/: __init__.py  auth_google.py  config.py  constants.py  demo_users.py  domain_models.py  domain_types.py  exception_handlers.py  llm.py  llm_adjudicate.py  llm_embed.py  llm_extract.py  logging_config.py  main.py  mcp_server.py  middleware_logging.py  middleware_ratelimit.py  repository_events.py  repository_memories.py  repository_sessions.py  routes_auth.py  routes_batch.py  routes_chat.py  routes_demo.py  routes_demo_state.py  routes_events.py  routes_health.py  routes_memories.py  routes_memories_search.py  routes_provenance.py  routes_session_new.py  routes_sessions.py  routes_similar.py  routes_stats.py  routes_teams.py  routes_trust_explain.py  schemas.py  service_conflict.py  service_decay.py  service_embed_cache.py  (+8 more)
backend/tests/: __init__.py  conftest.py  test_batch_operations.py  test_chat_pipeline.py  test_demo_reset.py  test_embed_cache.py  test_llm_adjudicate.py  test_llm_extract_fallback.py  test_mcp_server.py  test_memory_decay.py  test_memory_search.py  test_memory_single.py  test_provenance.py  test_routes_demo.py  test_routes_session_new.py  test_service_conflict.py  test_service_conflict_vector.py  test_service_memory.py  test_service_poison.py  test_service_poison_extended.py  test_service_session.py  test_service_trust.py  test_service_trust_extended.py  test_similar.py  test_stats.py  test_store_conflict_link.py  test_trust_explain.py
(+125 files in other folders)
