[project]
name = "memguard-backend"
version = "0.1.0"
description = "MemGuard FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.31",
  "asyncpg>=0.29.0",
  "redis>=5.0.7",
  "python-dotenv>=1.0.1",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.2.0",
]
